--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "TROSS-recognition"]
 	path = TROSS-recognition
 	url = git@github.com:casualuser322/TROSS-recognition.git
+	branch = main 
 [submodule "TROSS-distance-counter"]
 	path = TROSS-distance-counter
 	url = git@github.com:casualuser322/TROSS-distance-counter.git
+    branch = main 
